--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
   <link href="css/main.css" rel="stylesheet" />
   <script src="js/ForgeTree.js"></script>
   <script src="js/ForgeViewer.js"></script>
+
+  <script src="/extensions/handleselectionextension.js"></script>
+  <script src="/extensions/dockingpanelextension.js"></script>
 </head>
 <body>
   <!-- Fixed navbar by Bootstrap: https://getbootstrap.com/examples/navbar-fixed-top/ -->
