ajout custom extension

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,10 @@
   <link href="css/main.css" rel="stylesheet" />
   <script src="js/ForgeTree.js"></script>
   <script src="js/ForgeViewer.js"></script>
-
+  <!-- Forge viewer extensions -->
   <script src="/extensions/handleselectionextension.js"></script>
   <script src="/extensions/dockingpanelextension.js"></script>
+  <script src="/extensions/customextension.js"></script>
 </head>
 <body>
   <!-- Fixed navbar by Bootstrap: https://getbootstrap.com/examples/navbar-fixed-top/ -->
